# yt-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DUAL_AGENT_DOCS_STRATEGY.md  KNOWN_LIMITATIONS.md  LEARNING_01_STRUCTURED_TUTORIAL.md  LEARNING_02_QUICK_REFERENCE.md  LEARNING_03_COMPLETE_RETROSPECTIVE.md  LICENSE  LICENSE_FFMPEG.txt  MIGRATION_NOTES.md  README.md  RELEASE_CHECKLIST.md  TEST_REPORT.md  WINDOWS_ACCEPTANCE_TEMPLATE.md  pyproject.toml  requirements-cli.txt  requirements.txt  run.py  test-example.js  yt-tool.spec
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  (+1 more)
agents/: builder.md  output_contract.md  planner.md  rescuer.md  reviewer.md  scout.md
app/: __init__.py
rules/: README.md  allowlist.md  fast_path_commands.md  pr_operations.md  retrospective.md  runtime_permissions.md  workflow.md
scripts/: check_agent_docs.sh  check_ci.sh  fast_path.sh  fmt.sh
skills/: README.md  workflow.md
swift/: Package.swift  README.md
tests/: test_downloader.py  test_env_check.py  test_format_detector.py  test_gui_bridge.py  test_gui_controller.py  test_gui_frontend_contract.py  test_gui_frontend_playwright.py  test_gui_main.py  test_gui_main_window_env.py  test_gui_workers.py  test_main_flow.py  test_measure_startup.py  test_packaging_build_scripts.py  test_path_utils.py  test_prepare_ffmpeg.py  test_run_bootstrap.py  test_ui.py  test_workflow.py
tools/: check_ci.sh
yt-dlp-demo/: yt-download.sh  yt-interactive.sh
yt-tool/: .gitignore  INTEGRATION_TEST.md  KNOWN_LIMITATIONS.md  README.md  RELEASE_CHECKLIST.md  conftest.py  requirements.txt  run.py  yt-tool.spec
(+97 files in other folders)
